<resources>
    <string name="amazon_eula_title">Amazon MP3 Music Service: Terms of Use</string>
    <string name="about">About</string>
    <string name="about_cmp_summary">Connected Music Player terms and conditions</string>
    <string name="add_favorites">Add to Favorites</string>
    <string name="add_library">Add To Library</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="artist">Artist</string>
    <string name="auto_repeat">Auto repeat</string>
    <string name="auto_repeat_summary">Repeat playback of a list of songs</string>
    <string name="blip_via">Blip via:</string>
    <string name="buy_song">Buy Song</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_data_intensive_features">Data intensive features</string>
    <string name="confirm_data_intensive_features_summary">Warn me when I use features that stream data over a mobile network</string>
    <string name="confirm_password_label">Confirm\nPassword:</string>
    <string name="create_account">Create an Account</string>
    <string name="create_account_header">Fill out the form below to create your TuneWiki.com account. You can customize your account further by going to TuneWiki.com.</string>
    <string name="custom_message">Say something else:</string>
    <string name="data_usage">Data Usage</string>
    <string name="data_usage_summary">Limit the amount of data used by CMP</string>
    <string name="delete">Delete</string>
    <string name="display_lyrics">Display lyrics</string>
    <string name="download_song_data">Download song data</string>
    <string name="download_song_data_summary">Automatically download album art and lyrics over mobile networks</string>
    <string name="download_wifi_only">WiFi only purchasing</string>
    <string name="email_label">Email:</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="enter_password">Enter password</string>
    <string name="fm_radio_pref_dlg_title">FM Radio Region</string>
    <string name="hate_it">Hate it!</string>
    <string name="hint_email">myemail@domain.com</string>
    <string name="loading_list">Loading...</string>
    <string name="love_it">Love it!</string>
    <string name="music_home">Music Home</string>
    <string name="music_maps">Music Maps</string>
    <string name="music_videos">Music Videos</string>
    <string name="off">Off</string>
    <string name="ok">OK</string>
    <string name="password_label">Password:</string>
    <string name="pause">Pause</string>
    <string name="playlist_name">Playlist name..</string>
    <string name="preference_tunewiki_create_account">Press here to create a new account</string>
    <string name="preferences_set_fm_radio_region">FM Radio Region</string>
    <string name="preferences_set_username">TuneWiki Account</string>
    <string name="preferences_set_username_summary">Provide your TuneWiki.com email and password</string>
    <string name="preferences_tunewiki_set_user_email">TuneWiki.com Login</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="repeat_password">Repeat password</string>
    <string name="resync_this_song">Resync</string>
    <string name="search">Search</string>
    <string name="search_hint_artist">Artist</string>
    <string name="search_hint_phrase">Phrase</string>
    <string name="search_hint_title">Title</string>
    <string name="send">Send</string>
    <string name="send_blip">Send Blip</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="song_downloads">Song downloads</string>
    <string name="song_downloads_summary">View active and pending downloads</string>
    <string name="tap">Tap</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="username_label">Username:</string>
    <string name="wifi_download_only">Postpone song downloads until connected to WiFi</string>
</resources>