<?xml version="1.0" encoding="UTF-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/menu_blip" android:id="@id/menu_blip" android:title="@string/send_blip" />
    <item android:icon="@drawable/menu_music_home" android:id="@id/menu_music_home" android:title="@string/music_home" />
    <item android:icon="@drawable/menu_video" android:id="@id/menu_videos" android:title="@string/music_videos" />
    <item android:icon="@drawable/menu_music_map" android:id="@id/menu_music_maps" android:title="@string/music_maps" />
    <item android:icon="@drawable/menu_resync" android:id="@id/menu_resync" android:title="@string/resync_this_song" />
    <item android:icon="@drawable/menu_add_playlist" android:id="@id/menu_add_playlist" android:title="@string/add_to_playlist" />
    <item android:icon="@drawable/menu_preferences" android:id="@id/menu_settings" android:title="@string/settings" />
    <item android:icon="@drawable/menu_del_library" android:id="@id/menu_delete_song" android:title="@string/delete" />
    <item android:id="@id/menu_set_ringtone" android:title="@string/set_as_ringtone" />
</menu>