<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:paddingLeft="5.0px" android:paddingRight="5.0px" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="left" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
            <ImageView android:layout_gravity="center" android:id="@id/prefs_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/twicon" />
            <TextView android:id="@id/prefs_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/create_account_header" android:layout_toRightOf="@id/prefs_icon" style="@style/textMinor" />
        </LinearLayout>
        <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0px">
            <TableRow android:gravity="center_vertical">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email_label" style="@style/textMinor" />
                <EditText android:textColor="#ff000000" android:id="@id/edit_email" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/hint_email" android:singleLine="true" android:maxLength="250" android:layout_weight="1.0" />
            </TableRow>
            <TableRow android:gravity="center_vertical" android:layout_marginTop="10.0px">
                <TextView android:paddingRight="5.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/username_label" style="@style/textMinor" />
                <EditText android:textColor="#ff000000" android:id="@id/edit_username" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/username" android:singleLine="true" android:maxLength="250" android:layout_weight="1.0" />
            </TableRow>
            <TableRow android:gravity="center_vertical" android:layout_marginTop="10.0px">
                <TextView android:id="@id/text_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_label" style="@style/textMinor" />
                <EditText android:textColor="#ff000000" android:id="@id/edit_password" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/enter_password" android:password="true" android:singleLine="true" android:maxLength="250" android:layout_weight="1.0" />
            </TableRow>
            <TableRow android:gravity="center_vertical" android:layout_height="wrap_content" android:layout_marginTop="10.0px">
                <TextView android:id="@id/text_password_confirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirm_password_label" style="@style/textMinor" />
                <EditText android:textColor="#ff000000" android:id="@id/edit_password_confirm" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/repeat_password" android:password="true" android:singleLine="true" android:maxLength="250" android:layout_weight="1.0" />
            </TableRow>
        </TableLayout>
        <Button android:layout_gravity="center" android:id="@id/button_sign_up" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0px" android:text="@string/sign_up" />
    </LinearLayout>
</ScrollView>