<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="5.0px" android:paddingRight="5.0px" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#ffffffff" android:id="@id/text_user" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email_label" />
    <EditText android:id="@id/edit_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_email" android:singleLine="true" android:maxLength="250" android:inputType="textEmailAddress" />
    <TextView android:textColor="#ffffffff" android:id="@id/text_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_label" />
    <EditText android:id="@id/edit_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/enter_password" android:password="true" android:singleLine="true" android:maxLength="250" />
</LinearLayout>