<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gingerbread_white" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@id/edit_artist" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="?listPaddingLeft" android:layout_marginRight="?listPaddingRight" android:hint="@string/search_hint_artist" android:singleLine="true" android:maxLength="250" />
    <EditText android:id="@id/edit_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="?listPaddingLeft" android:layout_marginRight="?listPaddingRight" android:hint="@string/search_hint_title" android:singleLine="true" android:maxLength="250" />
    <EditText android:id="@id/edit_phrase" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="?listPaddingLeft" android:layout_marginRight="?listPaddingRight" android:hint="@string/search_hint_phrase" android:singleLine="true" android:maxLength="250" />
    <Button android:layout_gravity="center" android:id="@id/button_search" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="?listPaddingLeft" android:layout_marginTop="20.0px" android:layout_marginRight="?listPaddingRight" android:text="@string/search" />
</LinearLayout>