<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gingerbread_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.motorola.cmp">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
          xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:app="http://schemas.android.com/apk/res/com.motorola.cmp">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <LinearLayout android:orientation="vertical" android:id="@id/layout_love_it" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageButton android:layout_gravity="center_horizontal" android:id="@id/button_love_it" android:background="@drawable/empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/button_love" />
                    <TextView android:textAppearance="@style/textMinorBold" android:layout_gravity="center_horizontal" android:id="@id/txt_love_it" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/love_it" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/layout_hate_it" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageButton android:layout_gravity="center_horizontal" android:id="@id/button_hate_it" android:background="@drawable/empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/button_hate" />
                    <TextView android:textAppearance="@style/textMinorBold" android:layout_gravity="center_horizontal" android:id="@id/txt_hate_it" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hate_it" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:id="@id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="15.0dip" android:text="@string/custom_message" />
            <com.motorola.cmp.views.TouchEnableEditText android:state_enabled="false" android:id="@id/edit_custom" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="5.0dip" android:hint="@string/enter_message_here" android:singleLine="true" />
            <TextView android:id="@id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:text="@string/blip_via" />
            <Spinner android:id="@id/spinner_blip_via" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" />
        </LinearLayout>
    </ScrollView>
    <Button android:layout_gravity="bottom" android:id="@id/button_say_it" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/send" />
</LinearLayout>