<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gingerbread_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.motorola.cmp">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <RelativeLayout android:layout_width="91.0dip" android:layout_height="77.0dip" android:layout_marginTop="30.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tap_bubble" />
            <TextView android:textAppearance="@style/textMajorBold" android:gravity="center" android:paddingRight="8.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tap" android:layout_centerInParent="true" />
        </RelativeLayout>
        <com.motorola.cmp.views.SyncLyricView android:id="@id/lyric_view" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/loading" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" style="\?android:attr/progressBarStyleLarge" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading_list" android:layout_centerInParent="true" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:enabled="false" android:id="@id/button_pause" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pause" android:layout_weight="1.0" />
        <Button android:id="@id/button_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>